spdynmod 1.1
-----------------

* plot and extdata bugs fixed
* mrgf function added